2005-03-08  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-03-04  Roman Kennke  <roman@ontographics.com>

        * javax/swing/text/rtf/ControlWordToken.java: New file.
        * javax/swing/text/rtf/RTFEditorKit.java: New file.
        * javax/swing/text/rtf/RTFParseException.java: New file.
        * javax/swing/text/rtf/RTFParser.java: New file.
        * javax/swing/text/rtf/RTFScanner.java: New file.
        * javax/swing/text/rtf/TextToken.java: New file.
        * javax/swing/text/rtf/Token.java: New file.

2005-03-08  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-03-08  Audrius Meskauskas  <audriusa@bluewin.ch>

        * org/omg/CORBA/BooleanHolder.java,
        org/omg/CORBA/ByteHolder.java,
        org/omg/CORBA/CharHolder.java,
        org/omg/CORBA/DoubleHolder.java,
        org/omg/CORBA/FixedHolder.java,
        org/omg/CORBA/FloatHolder.java,
        org/omg/CORBA/IntHolder.java,
        org/omg/CORBA/LongHolder.java,
        org/omg/CORBA/ShortHolder.java,
        org/omg/CORBA/StringHolder.java,
        org/omg/CORBA/TypeCodeHolder.java:
        Fixing the _read method.

	2005-03-08  Audrius Meskauskas  <audriusa@bluewin.ch>

        * org/omg/CORBA/NamedValue.java,
        org/omg/CORBA/ARG_IN.java,
        org/omg/CORBA/ARG_OUT.java,
        org/omg/CORBA/ARG_INOUT.java:
        New files.

	2005-03-08  Audrius Meskauskas  <audriusa@bluewin.ch>

        * org/omg/CORBA/.java: New file.

	2005-03-06  Andrew John Hughes  <gnu_andrew@member.fsf.org>

        * gnu/CORBA/primitiveArrayTypeCode.java:
        Moved from org.omg.CORBA.
        * gnu/CORBA/primitiveTypeCode.java: Likewise.
        * org/omg/CORBA/BooleanHolder.java,
        org/omg/CORBA/ByteHolder.java,
        org/omg/CORBA/CharHolder.java,
        org/omg/CORBA/DoubleHolder.java,
        org/omg/CORBA/FixedHolder.java,
        org/omg/CORBA/FloatHolder.java,
        org/omg/CORBA/IntHolder.java,