@@ -1,3 +1,12 @@
+2005-03-09  Dalibor Topic  <robilad@kaffe.org>
+
+	Resynced with GNU Classpath.
+
+	2005-03-07  Jeroen Frijters  <jeroen@frijters.net>
+
+        * java/io/DataInputStream.java (ignoreInitialNewline): Removed
+        (readLine): Changed newline handling.
+
 2005-03-08  Dalibor Topic  <robilad@kaffe.org>
 
 	Resynced with GNU Classpath.
